add_executable(array 1_1_array.cc)
add_executable(vector 1_2_vector.cc)
add_executable(deque 1_3_deque.cc)
add_executable(list 1_4_list.cc)
add_executable(forward_list 1_5_forward_list.cc)

add_executable(map 2_1_map.cc)
add_executable(multimap 2_2_multimap.cc)
add_executable(set 3_1_set.cc)

add_executable(queue 4_1_queue.cc)