add_executable(array 1_1_array.cc)
add_executable(vector 1_2_vector.cc)
add_executable(deque 1_3_deque.cc)
add_executable(list 1_4_list.cc)
add_executable(forward_list 1_5_forward_list.cc)

add_executable(map 2_1_map.cc)
add_executable(multimap 2_2_multimap.cc)
add_executable(unordered_map 2_3_unordered_map.cc)
add_executable(unordered_multimap 2_4_unordered_multimap.cc)

add_executable(set 3_1_set.cc)
add_executable(multiset 3_2_multiset.cc)
add_executable(unordered_set 3_3_unordered_set.cc)
add_executable(unordered_multiset 3_4_unordered_multiset.cc)

add_executable(queue 4_1_queue.cc)
add_executable(priority_queue 4_2_priority_queue.cc)
add_executable(stack 4_3_stack.cc)

add_executable(reverse_iterator 6_1_reverse_iterator.cc)
add_executable(inserter_iterator 6_2_inserter_iterator.cc)
add_executable(istream_iterator 6_3_istream_iterator.cc)
add_executable(ostream_iterator 6_4_ostream_iterator.cc)

add_executable(lower_bound algorithm/01_lower_bound.cc)
add_executable(upper_bound algorithm/02_upper_bound.cc)
add_executable(sort algorithm/03_sort.cc)
add_executable(partial_sort algorithm/04_partial_sort.cc)
add_executable(nth_element algorithm/05_nth_element.cc)
add_executable(is_sorted algorithm/06_is_sorted.cc)
add_executable(merge algorithm/07_merge.cc)
add_executable(find algorithm/08_find.cc)
add_executable(search algorithm/09_search.cc)
add_executable(partition algorithm/10_partition.cc)
add_executable(binary_search algorithm/11_binary_search.cc)
add_executable(all_any_none algorithm/12_all_any_none_of.cc)
add_executable(equal_and_mismatch algorithm/13_equal_and_mismatch.cc)
add_executable(copy algorithm/14_copy.cc)