add_executable(quick_sort 01_quick_sort.cc)
add_executable(merge_sort 02_merge_sort.cc)
add_executable(heap_sort 03_heap_sort.cc)

add_executable(two_operand_sum leetcode/002_two_operand_sum.cc)
add_executable(max_norepeated_substring_length leetcode/003_max_norepeated_substring_length.cc)
add_executable(longest_palindrome leetcode/005_longest_palindrome.cc)
add_executable(z_convert leetcode/006_z_convert.cc)
add_executable(integer_convert leetcode/007_integer_convert.cc)
add_executable(regular leetcode/010_regular.cc)
add_executable(three_num_sum leetcode/016_three_num_sum_closer.cc)
add_executable(phone_num_express leetcode/017_phone_num_express.cc)
add_executable(remove_last_nth_node_in_list leetcode/019_remove_last_nth_node_in_list.cc)