add_executable(quick_sort 01_quick_sort.cc)
add_executable(merge_sort 02_merge_sort.cc)
add_executable(heap_sort 03_heap_sort.cc)

add_executable(two_operand_sum leetcode/002_two_operand_sum.cc)
add_executable(max_norepeated_substring_length leetcode/003_max_norepeated_substring_length.cc)
add_executable(longest_palindrome leetcode/005_longest_palindrome.cc)
add_executable(z_convert leetcode/006_z_convert.cc)
add_executable(integer_convert leetcode/007_integer_convert.cc)
add_executable(regular leetcode/010_regular.cc)
add_executable(three_num_sum leetcode/016_three_num_sum_closer.cc)
add_executable(phone_num_express leetcode/017_phone_num_express.cc)
add_executable(remove_last_nth_node_in_list leetcode/019_remove_last_nth_node_in_list.cc)
add_executable(gen_brackets leetcode/022_gen_brackets.cc)
add_executable(merge_k_lists leetcode/023_merge_k_lists.cc)
add_executable(reverse_k_group leetcode/025_reverse_k_group.cc)
add_executable(find_substring leetcode/030_find_substring.cc)
add_executable(combination_sum leetcode/039_combination_sum.cc)
add_executable(combination_sum2 leetcode/040_combination_sum2.cc)
add_executable(is_match leetcode/044_is_match.cc)
add_executable(jump leetcode/045_jump.cc)
add_executable(permute leetcode/046_permute.cc)
add_executable(permute2 leetcode/047_permute2.cc)
add_executable(rotate leetcode/048_rotate.cc)
add_executable(saveNqueues leetcode/051_saveNqueues.cc)
add_executable(maxsubArr leetcode/053_maxsubArr.cc)
add_executable(uniquePaths leetcode/063_uniquePaths2.cc)
add_executable(minDistance leetcode/072_minDistance.cc)
add_executable(minWindow leetcode/076_minWindow.cc)
add_executable(subsets leetcode/078_subsets.cc)
add_executable(exist leetcode/079_exist.cc)