add_executable(quick_sort 01_quick_sort.cc)
add_executable(merge_sort 02_merge_sort.cc)
add_executable(heap_sort 03_heap_sort.cc)

add_executable(two_operand_sum leetcode/002_two_operand_sum.cc)
add_executable(max_norepeated_substring_length leetcode/003_max_norepeated_substring_length.cc)
add_executable(longest_palindrome leetcode/005_longest_palindrome.cc)
add_executable(z_convert leetcode/006_z_convert.cc)
add_executable(integer_convert leetcode/007_integer_convert.cc)
add_executable(regular leetcode/010_regular.cc)
add_executable(three_num_sum leetcode/016_three_num_sum_closer.cc)
add_executable(phone_num_express leetcode/017_phone_num_express.cc)
add_executable(remove_last_nth_node_in_list leetcode/019_remove_last_nth_node_in_list.cc)
add_executable(gen_brackets leetcode/022_gen_brackets.cc)
add_executable(merge_k_lists leetcode/023_merge_k_lists.cc)
add_executable(reverse_k_group leetcode/025_reverse_k_group.cc)
add_executable(find_substring leetcode/030_find_substring.cc)
add_executable(longest_valid_parentheses leetcode/032_longest_valid_parentheses.cc)
add_executable(solve_sudoku leetcode/037_solve_sudoku.cc)
add_executable(combination_sum leetcode/039_combination_sum.cc)
add_executable(combination_sum2 leetcode/040_combination_sum2.cc)
add_executable(is_match leetcode/044_is_match.cc)
add_executable(jump leetcode/045_jump.cc)
add_executable(permute leetcode/046_permute.cc)
add_executable(permute2 leetcode/047_permute2.cc)
add_executable(rotate leetcode/048_rotate.cc)
add_executable(saveNqueues leetcode/051_saveNqueues.cc)
add_executable(maxsubArr leetcode/053_maxsubArr.cc)
add_executable(uniquePaths leetcode/063_uniquePaths2.cc)
add_executable(minDistance leetcode/072_minDistance.cc)
add_executable(minWindow leetcode/076_minWindow.cc)
add_executable(subsets leetcode/078_subsets.cc)
add_executable(exist leetcode/079_exist.cc)
add_executable(generateTrees leetcode/095_generateTrees.cc)
add_executable(numTrees leetcode/096_numTrees.cc)
add_executable(isValidBST leetcode/098_isValidBST.cc)
add_executable(recoverTree leetcode/099_recoverTree.cc)
add_executable(tree_is_metric leetcode/101_tree_is_symmetric.cc)
add_executable(levelOrder leetcode/102_levelOrder.cc)
add_executable(levelOrderBottom leetcode/107_levelOrderBottom.cc)
add_executable(sortedListToBST leetcode/109_sortedListToBST.cc)
add_executable(minDepth leetcode/111_minDepth.cc)
add_executable(hasPathSum leetcode/112_hasPathSum.cc)
add_executable(flatten leetcode/114_flatten.cc)
add_executable(numDistinct leetcode/115_numDistinct.cc)
add_executable(minimumTotal leetcode/120_minimumTotal.cc)
add_executable(maxPathSum leetcode/124_maxPathSum.cc)
add_executable(removeRepeatedNum leetcode/121_removeRepeatedNum.cc)

add_executable(reverseList leetcode/206_reverseList.cc)