add_executable(deconstruction 0_1_deconstruction.cc)
add_executable(string 0_2_string.cc)

add_executable(const 1_1_const.cc)
add_executable(move 1_2_move.cc)
add_executable(left_val_ref 1_3_left_val_ref.cc)
add_executable(right_val_ref 1_4_right_val_ref.cc)
add_executable(less_greater 1_5_less_greater.cc)

add_executable(lambda 2_1_lambda.cc)
add_executable(smart_point 3_1_smart_point.cc)

add_executable(size_of 8_1_sizeof.cc)
add_executable(two_dimensional_array 8_2_two_dimensional_array.cc)



